# mopidy-calmradio

./: README.md  README.rst  setup.cfg  tox.ini
mopidy_calmradio/: __init__.py  backend.py  calmradio.py  ext.conf  library.py  playback.py
tests/: test_extension.py
