[metadata]
name = Mopidy-CalmRadio
version = 1.0.0
url = https://github.com/ron4mac/mopidy-calmradio
author = Ron Crans
author_email = fortheron@me.com
license = Apache License, Version 2.0
license_file = LICENSE
description = Mopidy extension to play Calm Radio streams
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Environment :: No Input/Output (Daemon)
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Multimedia :: Sound/Audio :: Players

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.7
install_requires =
    Mopidy >= 3.0.0
    Pykka >= 2.0.1
    setuptools

[options.packages.find]
exclude =
    tests
    tests.*

[options.entry_points]
mopidy.ext =
    calmradio = mopidy_calmradio:Extension
